# yukarin_sa

./: Dockerfile  pyproject.toml  requirements.txt
scripts/: check_dataset.py
yukarin_sa/: config.py  dataset.py  trainer.py
yukarin_sa/data/: phoneme.py  sampling_data.py
yukarin_sa/utility/: dataset_utility.py  pytorch_utility.py  trainer_utility.py
