[project]
name = "yukarin_sa"
version = "0.1.0"
requires-python = "~=3.8.20"
dependencies = [
    "librosa",
    "numpy",
    "pyyaml",
    "scipy",
    "torch",
    "torch-optimizer",
    "tqdm",
]

[dependency-groups]
dev = [
    "librosa>=0.11.0",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "pytorch-trainer",
    "pyyaml>=6.0.2",
    "setuptools<65", # macOSでpytorch_trainer内のnumpyがエラーを出すため
    "tensorboardx>=2.6.2.2",
    "torch==1.13.1",
    "torch-optimizer>=0.3.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]

[tool.setuptools.packages.find]
include = ["yukarin_sa*"]

[tool.uv.sources]
pytorch-trainer = { git = "https://github.com/Hiroshiba/pytorch-trainer", rev = "1.3.3" }
